# keev

./: .gitignore  README.md  benchmark.py  benchmark_results_20250208_210713.json  example.py  pyproject.toml  requirements.txt
docs/: index.md
src/keev/: __init__.py  application.py  docs.py  exceptions.py  middleware.py  plugins.py  requests.py  responses.py  routing.py  static.py  utils.py  websocket.py
static/: index.html
tests/: test_core.py
tests/integration/: test_handlers.py  test_lifecycle.py
tests/unit/: test_middleware.py  test_responses.py
